[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scenes/Lost/Sprites/background_2.jpg" type="Texture" id=1]
[ext_resource path="res://fonts/main_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scenes/Credits/Credits.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Credits/Sprites/GWJ-Menu-Logo.webp" type="Texture" id=4]
[ext_resource path="res://fonts/Lato-Italic.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Scenes/Keybindings/Sprites/kb_dark_all.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 6
font_data = ExtResource( 5 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 6 )
region = Rect2( 128, 128, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 6 )
region = Rect2( 160, 128, 16, 16 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 3.0
} ]

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 174.462, 119.052 )
scale = Vector2( 0.116918, 0.117472 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_top = 30.0
margin_right = 320.0
margin_bottom = 80.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="next_char" type="Timer" parent="."]

[node name="Label2" type="Label" parent="."]
margin_left = -1.0
margin_top = 90.0
margin_right = 319.0
margin_bottom = 203.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "This game was developed during the 

by
flipez and juuljuul"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="."]
margin_left = -0.445465
margin_top = 230.118
margin_right = 319.555
margin_bottom = 238.118
custom_fonts/font = SubResource( 1 )
text = "picture sources: freepik.com, pixabay.com and other free sources"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Godot_logo" type="Sprite" parent="."]
position = Vector2( 160.732, 131.408 )
scale = Vector2( 0.562955, 0.562955 )
texture = ExtResource( 4 )

[node name="Label4" type="Label" parent="."]
margin_left = 0.445435
margin_top = 202.427
margin_right = 400.445
margin_bottom = 228.427
rect_scale = Vector2( 0.8, 0.8 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Press      to start the game again"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite5" type="AnimatedSprite" parent="Label4"]
position = Vector2( 128.946, 13.7062 )
scale = Vector2( 1.19959, 1.16478 )
frames = SubResource( 4 )
frame = 1
playing = true

[connection signal="timeout" from="next_char" to="." method="_on_next_char_timeout"]
